--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "mongoose": "^5.13.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0"
   }
 }
