--- a/package.json
+++ b/package.json
@@ -22,22 +22,21 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
-    "@types/passport": "^1.0.6",
     "nodemon": "^2.0.8",
     "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "@types/passport-local": "^1.0.33",
     "@types/passport-local-mongoose": "^4.0.14",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.5.0"
   }
